# review-detectors

./: LICENSE  README.md  ai_classifier.py  core.py  dstack.yml  env.example  processor.py  processor_config.py  pyproject.toml  requirements.txt
aigt/: __init__.py  aggregation.py  batching.py  config.py  detect_batch.py  detector.py  hf_assets.py  model_loader.py  tokenization.py  utils.py  windowing.py
review_classifier/: config.py  ultrashort.py
scripts/: predict_csv.py
